# The-Other-Shelf-Book-recommender

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Data/Clean/: google_books_checkpoint.json
Data/Keywords/: mature_graphic_novels_keywords.json
Keywords/: keywords.json
Models/: fantasy_tfidf_matrix.npz  fantasy_vectorizer.pkl  graphic_books_index.json  graphic_tfidf_matrix.npz  graphic_vectorizer.pkl  nonfiction_books_index.json  nonfiction_tfidf_matrix.npz  nonfiction_vectorizer.pkl  tfidf_matrix.npz  vectorizer.pkl
Notebooks/: 03_merge_and_clean_fantasy_clean.ipynb  04_eda_fantasy_clean.ipynb  05_recommender_fantasy_clean.ipynb  actual-scraping.ipynb  data-cleaning-non-fiction.ipynb  leftpolitics_raw.csv  leftpolitics_with_descriptions.csv  non-fiction-scraping.ipynb
Notebooks/exploratory/: 01_api_collector_fantasy.ipynb  02_goodreads_scraper_fantasy.ipynb  03_enrichment_fantasy.ipynb  03_merge_and_clean_fantasy.ipynb  04_eda_fantasy.ipynb  05_recommender_fantasy.ipynb
Notebooks/graphic_novels/: 01_api_collector_graphic_novels.ipynb  02_google_books_enrichment_graphic_novels.ipynb  04_eda_graphic_novels.ipynb  (+2 more)
Src/: 01_api_collector_fantasy.py  01_api_collector_graphic_novels.py  02_goodreads_scraper_fantasy.py  02_google_books_enrichment_graphic_novels.py  03_merge_and_clean_fantasy.py  03_merge_and_clean_graphic_novels.py  04_eda_fantasy.py  04_eda_graphic_novels.py  05_recommender_fantasy.py  05_recommender_graphic_novels.py  recommender.py  recommender_non_fiction.py
Streamlit/: Home.py
(+49 files in other folders)
