[project]
name = "book-recommendations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "hdbscan>=0.8.42",
    "jupyter>=1.1.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
    "webdriver-manager>=4.0.2",
    "wordcloud>=1.9.6",
]
